# cppcon21

./: CMakeLists.txt  README.md  Readme.md  Slides.md  build.sh  external.cmake
app/: CMakeLists.txt  main.cpp
include/cppcon/: common.hpp  concepts.hpp  date.hpp  print.hpp  serialize.hpp
src/: CMakeLists.txt  date.cpp
